cta arrow + hovers

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Live in Greece</title>
+    <link rel="icon" type="image/x-icon" href="./assets/img/arrow.png">
     <link rel="stylesheet" href="/src/css/main.css" />
     <script src="/src/js/libraries/imagesloaded.pkgd.min.js"></script>
     <script src="/src/js/libraries/lenis.min.js"></script>
@@ -23,7 +24,7 @@
 
         <!-- Main Menu -->
         <nav class="main-menu">
-          <div class="main-menu__mobile-button hamburger" pressed="false"></div>
+        
           <span>For</span>
           <ul
             data-menu="main"
@@ -44,6 +45,8 @@
             <a href="">Innitiatives</a>
             <a href="">Q&A</a>
           </div>
+
+          <div class="main-menu__mobile-button hamburger" pressed="false"></div>
         </nav>
       </div>
     </header>
