custom cursor + hover

--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
           <div class="main-menu__mobile-button hamburger" pressed="false"></div>
         </nav>
       </div>
+
     </header>
+    <div class="cursor"></div>
 
     <!-- Main  -->
     <main>
@@ -76,7 +78,7 @@
               grow, and invest in a country that blends rich history,
               captivating culture and a promising entrepreneurial ecosystem.
             </p>
-            <a href=""><button class="cta text">Become a citizen</button></a>
+            <a href=""><button class="cta text activates-cursor">Become a citizen</button></a>
           </div>
           <div class="hero__img-container">
             <img src="assets/img/hero-img-04.jpg" alt="" class="hero__img" />
@@ -93,13 +95,13 @@
 
           <div class="discover__links text-l uppercase">
             <div class="discover__item discover__item--hover">
-              <a href="" class="discover__link">Talents</a>
+              <a href="" class="discover__link activates-cursor">Talents</a>
             </div>
             <div class="discover__item">
-              <a href="" class="discover__link">Talents</a>
+              <a href="" class="discover__link activates-cursor">Talents</a>
             </div>
             <div class="discover__item">
-              <a href="" class="discover__link">Talents</a>
+              <a href="" class="discover__link activates-cursor">Talents</a>
             </div>
           </div>
         </div>
