custom cursor + hover links

--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
             class="uppercase main-menu__list main-menu__list--closed"
           >
             <li>
-              <a href="#">Talents</a>
+              <a href="#" class="activates-cursor">Talents</a>
             </li>
-            <li>
-              <a href="#">Entrepreneurs</a>
+            <li >
+              <a href="#" class="activates-cursor">Entrepreneurs</a>
             </li>
-            <li>
-              <a href="#">Investors</a>
+            <li >
+              <a href="#" class="activates-cursor">Investors</a>
             </li>
           </ul>
 
           <div class="header__extra-menu">
-            <a href="">Innitiatives</a>
-            <a href="">Q&A</a>
+            <a href="" class="activates-cursor">Innitiatives</a>
+            <a href="" class="activates-cursor">Q&A</a>
           </div>
 
           <div class="main-menu__mobile-button hamburger" pressed="false"></div>
