circle animation on progress

--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
       </div>
 
     </header>
-    <div class="cursor"></div>
+    <div class="cursor">
+      <div class="cursor__internal"></div>
+    </div>
 
     <!-- Main  -->
     <main>
@@ -80,8 +82,9 @@
             </p>
             <a href=""><button class="cta text activates-cursor">Become a citizen</button></a>
           </div>
-          <div class="hero__img-container">
-            <img src="assets/img/hero-img-04.jpg" alt="" class="hero__img" />
+          <div class="hero__img-container activates-cursor-ultra">
+            <img src="assets/img/hero-img-04.jpg" alt="" class="hero__img activates-cursor-ultra" />
+            <div class="hero__circle activates-cursor-ultra"></div>
           </div>
         </div>
       </section>
