--- a/index.html
+++ b/index.html
@@ -51,9 +51,13 @@
       </div>
 
     </header>
-    <div class="cursor">
-      <div class="cursor__internal"></div>
+    <div class="cursor cursor--1">
+      <!-- <div class="cursor__circle cursor__circle--large"></div> -->
+      <div class="cursor__circle cursor__circle--small
+      "></div>
     </div>
+
+  
 
     <!-- Main  -->
     <main>
@@ -82,9 +86,14 @@
             </p>
             <a href=""><button class="cta text activates-cursor">Become a citizen</button></a>
           </div>
-          <div class="hero__img-container activates-cursor-ultra">
+          <div class="hero__img-container hero__img-container--interactive activates-cursor-ultra">
+            <div class="cursor cursor--2">
+              <div class="cursor__circle cursor__circle--large"></div>
+              <!-- <div class="cursor__circle cursor__circle--small
+              "></div> -->
+            </div>
             <img src="assets/img/hero-img-04.jpg" alt="" class="hero__img activates-cursor-ultra" />
-            <div class="hero__circle activates-cursor-ultra"></div>
+            <!-- <div class="hero__circle activates-cursor-ultra"></div> -->
           </div>
         </div>
       </section>
