--- a/index.html
+++ b/index.html
@@ -88,7 +88,9 @@
           </div>
           <div class="hero__img-container hero__img-container--interactive activates-cursor-ultra">
             <div class="cursor cursor--2">
-              <div class="cursor__circle cursor__circle--large"></div>
+              <div class="cursor__circle cursor__circle--large">
+                <div class="cursor__arrow"><img src="./assets/img/arrow.svg" alt=""></div>
+              </div>
               <!-- <div class="cursor__circle cursor__circle--small
               "></div> -->
             </div>
