--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
 
           <div class="main-menu__mobile-button hamburger" pressed="false"></div>
         </nav>
+
+        <div class="main-menu__mobile-button hamburger" pressed="false"></div>
       </div>
 
     </header>
@@ -67,13 +69,13 @@
           <h1 class="heading-l hero__heading">
             Greece the birthplace of ideas
           </h1>
-          <div class="hero__img-container">
+          <div class="hero__img-container hero__img-container--1">
             <img src="assets/img/hero-img-01.jpg" alt="" class="hero__img" />
           </div>
-          <div class="hero__img-container">
+          <div class="hero__img-container hero__img-container--2">
             <img src="assets/img/hero-img-02.jpg" alt="" class="hero__img" />
           </div>
-          <div class="hero__img-container">
+          <div class="hero__img-container hero__img-container--3">
             <img src="assets/img/hero-img-03.jpg" alt="" class="hero__img" />
           </div>
           <div class="hero__text-container">
@@ -91,11 +93,11 @@
               <div class="cursor__circle cursor__circle--large">
                 <div class="cursor__arrow"><img src="./assets/img/arrow.svg" alt=""></div>
               </div>
-              <!-- <div class="cursor__circle cursor__circle--small
-              "></div> -->
             </div>
             <img src="assets/img/hero-img-04.jpg" alt="" class="hero__img activates-cursor-ultra" />
-            <!-- <div class="hero__circle activates-cursor-ultra"></div> -->
+            <div class="hero__circle hero__circle--interactive activates-cursor-ultra">
+              <div class="hero__arrow"><img src="./assets/img/arrow.svg" alt=""></div>
+            </div>
           </div>
         </div>
       </section>
