--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="header">
       <div class="header__container boxed centered">
         <!-- Logo  -->
-        <div class="header__logo-container">
+        <div class="header__logo-container activates-cursor">
           <a href="/" class="uppercase"> #liveingreece </a>
         </div>
 
@@ -45,11 +45,16 @@
             <a href="" class="activates-cursor">Innitiatives</a>
             <a href="" class="activates-cursor">Q&A</a>
           </div>
-
-          <div class="main-menu__mobile-button hamburger" pressed="false"></div>
+          <div class="hamburger-container">
+            <div
+              class="main-menu__mobile-button hamburger"
+              pressed="false"
+            ></div>
+          </div>
+          <!-- <div class="main-menu__mobile-button hamburger" pressed="false"></div> -->
         </nav>
 
-        <div class="main-menu__mobile-button hamburger" pressed="false"></div>
+        <!-- <div class="main-menu__mobile-button hamburger" pressed="false"></div> -->
       </div>
 
     </header>
