--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   
 
     <!-- Main  -->
-    <main>
+    <main class="main">
       <!-- Hero  -->
       <section class="hero hero--home">
         <div class="boxed centered hero__container">
@@ -128,5 +128,10 @@
         </div>
       </section>
     </main>
+
+    <!-- Loader  -->
+    <div class="loader">
+      <div class="loader__spinner"></div>
+    </div>
   </body>
 </html>
