--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
       <section class="hero hero--home">
         <div class="boxed centered hero__container">
           <h1 class="heading-l hero__heading">
-            Greece the birthplace of ideas
+            <span>Greece</span> <span>the</span> <span>birthplace</span> <span>of ideas</span>
+               
           </h1>
           <div class="hero__img-container hero__img-container--1">
             <img src="assets/img/hero-img-01.jpg" alt="" class="hero__img" />
