--- a/index.html
+++ b/index.html
@@ -120,10 +120,10 @@
               <a href="" class="discover__link activates-cursor">Talents</a>
             </div>
             <div class="discover__item">
-              <a href="" class="discover__link activates-cursor">Talents</a>
+              <a href="" class="discover__link activates-cursor">Entrepreneurs</a>
             </div>
             <div class="discover__item">
-              <a href="" class="discover__link activates-cursor">Talents</a>
+              <a href="" class="discover__link activates-cursor">Investors</a>
             </div>
           </div>
         </div>
