ready for submit

--- a/index.html
+++ b/index.html
@@ -51,20 +51,11 @@
               pressed="false"
             ></div>
           </div>
-          <!-- <div class="main-menu__mobile-button hamburger" pressed="false"></div> -->
         </nav>
-
-        <!-- <div class="main-menu__mobile-button hamburger" pressed="false"></div> -->
       </div>
 
     </header>
-    <div class="cursor cursor--1">
-      <!-- <div class="cursor__circle cursor__circle--large"></div> -->
-      <div class="cursor__circle cursor__circle--small
-      "></div>
-    </div>
-
-  
+   
 
     <!-- Main  -->
     <main class="main">
@@ -72,8 +63,7 @@
       <section class="hero hero--home">
         <div class="boxed centered hero__container">
           <h1 class="heading-l hero__heading">
-            <span>Greece</span> <span>the</span> <span>birthplace</span> <span>of ideas</span>
-               
+            <span>Greece</span> <span>the</span> <span>birthplace</span> <span>of ideas</span>              
           </h1>
           <div class="hero__img-container hero__img-container--1">
             <img src="assets/img/hero-img-01.jpg" alt="" class="hero__img" />
@@ -129,6 +119,10 @@
         </div>
       </section>
     </main>
+
+    <div class="cursor cursor--1">
+      <div class="cursor__circle cursor__circle--small"></div>
+    </div>  
 
     <!-- Loader  -->
     <div class="loader">
