--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Live in Greece</title>
-    <link rel="icon" type="image/x-icon" href="./assets/img/arrow.png">
+    <link rel="icon" type="image/x-icon" href="./assets/img/arrow.png" />
     <link rel="stylesheet" href="/src/css/main.css" />
     <script src="/src/js/libraries/imagesloaded.pkgd.min.js"></script>
     <script src="/src/js/libraries/lenis.min.js"></script>
@@ -24,7 +24,6 @@
 
         <!-- Main Menu -->
         <nav class="main-menu">
-        
           <span>For</span>
           <ul
             data-menu="main"
@@ -33,10 +32,10 @@
             <li>
               <a href="#" class="activates-cursor">Talents</a>
             </li>
-            <li >
+            <li>
               <a href="#" class="activates-cursor">Entrepreneurs</a>
             </li>
-            <li >
+            <li>
               <a href="#" class="activates-cursor">Investors</a>
             </li>
           </ul>
@@ -53,9 +52,7 @@
           </div>
         </nav>
       </div>
-
     </header>
-   
 
     <!-- Main  -->
     <main class="main">
@@ -63,7 +60,8 @@
       <section class="hero hero--home">
         <div class="boxed centered hero__container">
           <h1 class="heading-l hero__heading">
-            <span>Greece</span> <span>the</span> <span>birthplace</span> <span>of ideas</span>              
+            <span>Greece</span> <span>the</span> <span>birthplace</span>
+            <span>of ideas</span>
           </h1>
           <div class="hero__img-container hero__img-container--1">
             <img src="assets/img/hero-img-01.jpg" alt="" class="hero__img" />
@@ -82,17 +80,41 @@
               grow, and invest in a country that blends rich history,
               captivating culture and a promising entrepreneurial ecosystem.
             </p>
-            <a href=""><button class="cta text activates-cursor">Become a citizen</button></a>
+            <a href=""
+              ><button class="cta text activates-cursor">
+                Become a citizen
+              </button></a
+            >
           </div>
-          <div class="hero__img-container hero__img-container--interactive activates-cursor-ultra">
-            <div class="cursor cursor--2">
-              <div class="cursor__circle cursor__circle--large">
-                <div class="cursor__arrow"><img src="./assets/img/arrow.svg" alt=""></div>
+          <div
+            class="hero__img-container hero__img-container--interactive activates-cursor-ultra"
+          >
+            <div class="arrow-wrapper">
+              <div class="arrow-centered">
+                <img src="./assets/img/arrow-flip.svg" alt="" />
               </div>
             </div>
-            <img src="assets/img/hero-img-04.jpg" alt="" class="hero__img activates-cursor-ultra" />
-            <div class="hero__circle hero__circle--interactive activates-cursor-ultra">
-              <div class="hero__arrow"><img src="./assets/img/arrow.svg" alt=""></div>
+
+            <div class="arrow-wrapper"></div>
+            <div class="cursor cursor--2">
+              <div class="cursor__circle cursor__circle--large">
+                <!-- <div class="cursor__arrow">
+                  hey
+                  <img src="./assets/img/arrow.svg" alt="" />
+                </div> -->
+              </div>
+            </div>
+            <img
+              src="assets/img/hero-img-04.jpg"
+              alt=""
+              class="hero__img activates-cursor-ultra"
+            />
+            <div
+              class="hero__circle hero__circle--interactive activates-cursor-ultra"
+            >
+              <div class="hero__arrow">
+                <img src="./assets/img/arrow.svg" alt="" />
+              </div>
             </div>
           </div>
         </div>
@@ -110,7 +132,9 @@
               <a href="" class="discover__link activates-cursor">Talents</a>
             </div>
             <div class="discover__item">
-              <a href="" class="discover__link activates-cursor">Entrepreneurs</a>
+              <a href="" class="discover__link activates-cursor"
+                >Entrepreneurs</a
+              >
             </div>
             <div class="discover__item">
               <a href="" class="discover__link activates-cursor">Investors</a>
@@ -122,7 +146,7 @@
 
     <div class="cursor cursor--1">
       <div class="cursor__circle cursor__circle--small"></div>
-    </div>  
+    </div>
 
     <!-- Loader  -->
     <div class="loader">
